#main 1. apigateway => MVC 동기방식

--- a/new-toy-msa/pom.xml
+++ b/new-toy-msa/pom.xml
@@ -15,6 +15,9 @@
     <modules>
         <module>service-discovery</module>
         <module>user-service</module>
+        <module>first-service</module>
+        <module>second-service</module>
+        <module>apigateway-service</module>
     </modules>
     <name>new-toy-msa</name>
     <description>new-toy-msa</description>
